welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:45: error: not found: value baisserBrosse
  baisserBrosse()
  ^